[gd_scene load_steps=15 format=2]

[ext_resource path="res://Characters/Health.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/themes/hint_object_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/scribbles.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gameobjects/tumor.gd" type="Script" id=4]
[ext_resource path="res://raw_assets/textures/pustile-light.png" type="Texture" id=5]
[ext_resource path="res://UI/ui_bar.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 1, 0.5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2, 2, 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0.768627, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Info/VBoxContainer/Label:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:custom_styles/fg:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.768627, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:custom_styles/bg:bg_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Info/VBoxContainer/Label:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:custom_styles/fg:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.768627, 0, 0, 0 ), Color( 0.768627, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:custom_styles/bg:bg_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.196078 ) ]
}

[node name="tumor" type="StaticBody"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 4 )
rot_increase_amount = 2

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
billboard = 2
shaded = true
texture = ExtResource( 5 )

[node name="Health" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23512, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="HurtArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="HurtArea"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -69.0
margin_right = 208.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_right = 416.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_fonts/font = SubResource( 3 )
text = "Tumor"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 71.0
margin_right = 416.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
script = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer/Info/VBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_fonts/font = SubResource( 6 )
text = "Carapace"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/fade_in = SubResource( 8 )

[node name="RotTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="RotTimer" to="." method="_on_RotTimer_timeout"]
